# Studies-Haskell

./: README.md  example.cabal
src/: Booleans.hs  Main.hs
src/Study/: Classes.hs  Type.hs
src/Study/Types/: Bits.hs  Bool.hs  Maybe.hs
