cabal-version:   3.0
name:            example
version:         0.1.0.0
license:         MIT
author:          TheMhv
maintainer:      TheMhv@proton.me
build-type:      Simple

library
    exposed-modules: Study.Types.Bool

common warnings
    ghc-options: -Wall

executable example
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
